--- a/.vscode/style.css
+++ b/.vscode/style.css
@@ -7,3 +7,25 @@
 ul {
     list-style: none;
 }
+
+body {
+    background-color: #000000;
+}
+
+main .character {
+    display: none;
+    height: 100vh;
+}
+
+main .character.selected {
+    display: block;
+}
+
+main .character .image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
+
