--- a/.vscode/style.css
+++ b/.vscode/style.css
@@ -10,6 +10,7 @@ ul {
 
 body {
     background-color: #000000;
+    overflow: hidden;
 }
 
 main::after {
@@ -72,5 +73,52 @@ main .character .image {
     width: 230px;
     margin-bottom: 15px;
 }
+
+.buttons {
+    position: fixed;
+    top: 0;
+    right: 0;
+
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    width: 180px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+#first-button {
+    margin-top: 50%;
+}
+
+.buttons .button {
+    border: none;
+    background: none;
+    cursor: pointer;
+    border-radius: 50%;
+}
+
+.buttons .button img {
+    border-radius: 50%;
+    background-color: #000;
+}
+
+.buttons .button.selected {
+    transform: scale(1.2);
+    box-shadow: 0 0 15px #D9D9D9;
+}
+
+/* responsiveness */
+
+@media (max-width: 769px) {
+    .content .character-name {
+        
+    }
+}
+
+
 
 
