--- a/.vscode/style.css
+++ b/.vscode/style.css
@@ -114,9 +114,45 @@ main .character .image {
 /* responsiveness */
 
 @media (max-width: 769px) {
-    .content .character-name {
-        
+    main::after {
+        background: linear-gradient(0deg, #000 20%, rgba(0, 0, 0, 0.00) 65%) no-repeat;
+        width: 100vw;
     }
+
+    main .character .image {
+        height: 85%;
+    }
+
+    .content {
+        justify-content: flex-end;
+        left: 0;
+        max-width: 100vw;
+        padding: 30px;
+    }
+
+    .content .character-name {
+        font-size: 36px;
+    }
+
+    .content .description {
+        max-width: 500px;
+    }
+
+    .buttons {
+        flex-direction: row;
+        align-items: flex-end;
+        width: 100%;
+        padding: 30px;
+    }
+
+    .buttons .button img {
+        max-width: 60px;
+    }
+
+    #first-button {
+        margin-left: 10%;
+    }
+
 }
 
 
