--- a/.vscode/style.css
+++ b/.vscode/style.css
@@ -90,7 +90,7 @@ main .character .image {
     background-color: rgba(0, 0, 0, 0.2);
 }
 
-#first-button {
+#SatoruGojo {
     margin-top: 50%;
 }
 
@@ -149,7 +149,7 @@ main .character .image {
         max-width: 60px;
     }
 
-    #first-button {
+    #SatoruGojo {
         margin-left: 10%;
     }
 
