--- a/.vscode/style.css
+++ b/.vscode/style.css
@@ -86,6 +86,7 @@ main .character .image {
     justify-content: center;
     align-items: center;
     gap: 10px;
+    
 
     background-color: rgba(0, 0, 0, 0.2);
 }
@@ -94,11 +95,17 @@ main .character .image {
     margin-top: 50%;
 }
 
+.button:hover {
+    transition: 1s ease-in-out;
+    background: #4F95DA;
+}
+
 .buttons .button {
     border: none;
     background: none;
     cursor: pointer;
     border-radius: 50%;
+    transition: 0.25s ease-in-out;
 }
 
 .buttons .button img {
