--- a/.vscode/style.css
+++ b/.vscode/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
+  }
 
 ul {
     list-style: none;
@@ -81,7 +81,7 @@ main .character .image {
 
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    height: 100vh;
     width: 180px;
     justify-content: center;
     align-items: center;
@@ -95,17 +95,14 @@ main .character .image {
     margin-top: 50%;
 }
 
-.button:hover {
-    transition: 1s ease-in-out;
-    background: #4F95DA;
-}
 
 .buttons .button {
     border: none;
     background: none;
     cursor: pointer;
     border-radius: 50%;
-    transition: 0.25s ease-in-out;
+    
+    top: 100px;
 }
 
 .buttons .button img {
@@ -120,46 +117,72 @@ main .character .image {
 
 /* responsiveness */
 
+@media (min-width: 769px) {
+    *::-webkit-scrollbar {
+        display: none;
+    }
+    .buttons .button.selected:hover {
+        transform: translateX(-25%) rotate(-45deg);
+        transition: 0.5s;
+    }
+    
+    .button:hover {
+        transform: translateX(-25%) rotate(-45deg);
+        transition: 0.5s;
+    }
+    
+    .buttons {
+        overflow-y: scroll;
+    }
+    
+    .buttons .button {
+        position: relative;
+    }
+}
+
 @media (max-width: 769px) {
     main::after {
         background: linear-gradient(0deg, #000 20%, rgba(0, 0, 0, 0.00) 65%) no-repeat;
         width: 100vw;
     }
-
+    
     main .character .image {
         height: 85%;
     }
-
+    
     .content {
         justify-content: flex-end;
         left: 0;
         max-width: 100vw;
         padding: 30px;
     }
-
+    
     .content .character-name {
         font-size: 36px;
     }
-
+    
     .content .description {
         max-width: 500px;
     }
-
+    
     .buttons {
         flex-direction: row;
         align-items: flex-end;
-        width: 100%;
+        min-width: 100%;
         padding: 30px;
+        overflow-x: scroll;
     }
-
+    
     .buttons .button img {
         max-width: 60px;
     }
-
+    
     #SatoruGojo {
         margin-left: 10%;
     }
-
+    
+    *::-webkit-scrollbar {
+        display: none;
+    }
+    
 }
-
-
