--- a/.vscode/style.css
+++ b/.vscode/style.css
@@ -1,129 +1,82 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-
-ul {
-    list-style: none;
-}
-
-body {
-    background-color: #000000;
-    overflow: hidden;
-}
-
-main::after {
-    content: "";
-    position: fixed;
-    top: 0;
-    left: 0;
-    min-height: 100vh;
-    width: 80vw;
-
-    background: linear-gradient(-223deg, #000 22.5%, rgba(0, 0, 0, 0) 65%) no-repeat;
-}
-
-main .character {
-    display: none;
-    height: 100vh;
-}
-
-main .character.selected {
-    display: block;
-}
-
-main .character .image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.content {
-    position: absolute;
-    top: 0;
-    left: 120px;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    min-height: 80vh;
-    max-width: 380px;
-    z-index: 1;
-}
-
-.content .character-name {
-    color: #ffffff;
-    font-size: 48px;
-    font-family: "Secular One";
-    font-weight: 400;
-    margin-bottom: 20px;
-}
-
-.content .description {
-    color: #ffffff;
-    font-family: "Rubik";
-    line-height: 24px;
-}
-
-.content .logo {
-    background-image: url(../Imagens/zJujutsuKaisen.png);
-    background-size: cover;
-    height: 150px;
-    width: 230px;
-    margin-bottom: 15px;
-}
-
-.buttons {
-    position: fixed;
-    top: 0;
-    right: 0;
-
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    width: 180px;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    
-
-    background-color: rgba(0, 0, 0, 0.2);
-}
-
-#SatoruGojo {
-    margin-top: 50%;
-}
-
-
-.buttons .button {
-    border: none;
-    background: none;
-    cursor: pointer;
-    border-radius: 50%;
-    
-    top: 100px;
-}
-
-.buttons .button img {
-    border-radius: 50%;
-    background-color: #000;
-}
-
-.buttons .button.selected {
-    transform: scale(1.2);
-    box-shadow: 0 0 15px #D9D9D9;
-}
 
 /* responsiveness */
 
 @media (min-width: 769px) {
-    *::-webkit-scrollbar {
-        display: none;
+    
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+    
+    ul {
+        list-style: none;
     }
-    .buttons .button.selected:hover {
-        transform: translateX(-25%) rotate(-45deg);
-        transition: 0.5s;
+    
+    body {
+        background-color: #000000;
+        overflow: hidden;
+    }
+    
+    main::after {
+        content: "";
+        position: fixed;
+        top: 0;
+        left: 0;
+        min-height: 100vh;
+        width: 80vw;
+    
+        background: linear-gradient(-223deg, #000 22.5%, rgba(0, 0, 0, 0) 65%) no-repeat;
+    }
+    
+    main .character {
+        display: none;
+        height: 100vh;
+    }
+    
+    main .character.selected {
+        display: block;
+    }
+    
+    main .character .image {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    
+    .content {
+        position: absolute;
+        top: 0;
+        left: 120px;
+        
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        min-height: 80vh;
+        max-width: 380px;
+        z-index: 1;
+    }
+    
+    .content .character-name {
+        color: #ffffff;
+        font-size: 48px;
+        font-family: "Secular One";
+        font-weight: 400;
+        margin-bottom: 20px;
+    }
+    
+    .content .description {
+        color: #ffffff;
+        font-family: "Rubik";
+        line-height: 24px;
+    }
+    
+    .content .logo {
+        background-image: url(../Imagens/zJujutsuKaisen.png);
+        background-size: cover;
+        height: 150px;
+        width: 230px;
+        margin-bottom: 15px;
     }
     
     .button:hover {
@@ -131,58 +84,238 @@ main .character .image {
         transition: 0.5s;
     }
     
-    .buttons {
-        overflow-y: scroll;
-    }
-    
-    .buttons .button {
-        position: relative;
-    }
-}
-
-@media (max-width: 769px) {
-    main::after {
-        background: linear-gradient(0deg, #000 20%, rgba(0, 0, 0, 0.00) 65%) no-repeat;
-        width: 100vw;
-    }
-    
-    main .character .image {
-        height: 85%;
-    }
-    
-    .content {
-        justify-content: flex-end;
-        left: 0;
-        max-width: 100vw;
-        padding: 30px;
-    }
-    
-    .content .character-name {
-        font-size: 36px;
-    }
-    
-    .content .description {
-        max-width: 500px;
-    }
-    
-    .buttons {
-        flex-direction: row;
-        align-items: flex-end;
-        min-width: 100%;
-        padding: 30px;
-        overflow-x: scroll;
-    }
-    
-    .buttons .button img {
-        max-width: 60px;
-    }
-    
-    #SatoruGojo {
-        margin-left: 10%;
+    .buttons .button.selected:hover {
+        transform: translateX(-25%) rotate(-45deg);
+        transition: 0.5s;
     }
     
     *::-webkit-scrollbar {
         display: none;
     }
     
-}
+    .buttons {
+        position: fixed;
+        top: 0;
+        right: 0;
+        
+        display: flex;
+        flex-direction: column;
+        height: 100vh;
+        width: 180px;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        overflow-y: scroll;
+        
+        
+        background-color: rgba(0, 0, 0, 0.2);
+    }
+    
+    #SatoruGojo {
+        margin-top: 50%;
+    }
+    
+    
+    .buttons .button {
+        border: none;
+        background: none;
+        cursor: pointer;
+        border-radius: 50%;
+        
+        top: 100px;
+        position: relative;
+    }
+    
+    .buttons .button img {
+        border-radius: 50%;
+        background-color: #000;
+    }
+    
+    .buttons .button.selected {
+        transform: scale(1.2);
+        box-shadow: 0 0 15px #D9D9D9;
+    }
+        
+        
+        
+    }
+    
+
+
+
+
+
+
+
+
+
+
+    
+
+
+
+
+
+    
+    @media (max-width: 769px) {
+
+        
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+    
+    ul {
+        list-style: none;
+    }
+    
+    body {
+        background-color: #000000;
+        overflow: hidden;
+    }
+    
+
+        main::after {
+            content: "";
+            position: fixed;
+            top: 0;
+            left: 0;
+            min-height: 100vh;
+        
+
+            background: linear-gradient(0deg, #000 20%, rgba(0, 0, 0, 0.00) 65%) no-repeat;
+            width: 100vw;
+        }
+
+        main .character {
+            display: none;
+            height: 100vh;
+        }
+        
+        main .character.selected {
+            display: block;
+        }
+        
+        main .character .image {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+        
+        .content {
+            position: absolute;
+            top: 0;
+            left: 120px;
+            
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            min-height: 80vh;
+            max-width: 380px;
+            z-index: 1;
+        }
+    
+        main .character .image {
+            height: 85%;
+        }
+
+        
+        .content {
+            justify-content: flex-end;
+            left: 0;
+            max-width: 100vw;
+            padding: 30px;
+        }
+        
+        .content .character-name {
+            color: #ffffff;
+            font-size: 48px;
+            font-family: "Secular One";
+            font-weight: 400;
+            margin-bottom: 20px;
+        }
+        
+        .content .description {
+            color: #ffffff;
+            font-family: "Rubik";
+            line-height: 24px;
+        }
+        
+        .content .character-name {
+            font-size: 36px;
+        }
+        
+        .content .description {
+            max-width: 500px;
+        }
+
+        .content .logo {
+            background-image: url(../Imagens/zJujutsuKaisen.png);
+            background-size: cover;
+            height: 150px;
+            width: 230px;
+            margin-bottom: 15px;
+        }
+        
+        .button:hover {
+            transform: translateY(-25%) rotate(-45deg);
+            transition: 0.5s;
+        }
+        
+        .buttons .button.selected:hover {
+            transform: translateY(-25%) rotate(-45deg);
+            transition: 0.5s;
+        }
+        
+        .buttons {
+            position: fixed;
+            bottom: 0;
+            right: 0;
+            
+            display: flex;
+            justify-content: flex-start;
+            gap: 10px;
+            overflow-x: auto;
+            
+            
+            background-color: rgba(0, 0, 0, 0.2);
+            
+            
+            flex-direction: row;
+            align-items: center;
+            width: 100%;
+            padding: 25px;
+            overflow-x: scroll;
+        }
+        
+        
+        .buttons .button {
+            border: none;
+            background: none;
+            cursor: pointer;
+            border-radius: 50%;
+            
+        }
+        
+        .buttons .button img {
+            border-radius: 50%;
+            background-color: #000;
+        }
+        
+        .buttons .button.selected {
+            transform: scale(1.1);
+            box-shadow: 0 0 15px #D9D9D9;
+        }
+        
+    
+        .buttons .button img {
+            max-width: 60px;
+        }
+        
+        *::-webkit-scrollbar {
+            display: none;
+        }
+        
+    }
+    
